k8s/10-cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
