k8s/04-image-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
  namespace: prod-image
  labels:
    app: image-service
    version: v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: image-service
          image: localhost:5001/image-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 2

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 384Mi

---
apiVersion: v1
kind: Service
metadata:
  name: image-service
  namespace: prod-image
  labels:
    app: image-service
spec:
  type: ClusterIP
  selector:
    app: image-service
  ports:
    - name: http
      port: 80          # ✅ standard service port
      targetPort: 5000  # app port
      protocol: TCP
